syntax = "proto3";

option go_package = "./api;api";

package proto;

service Session {
    rpc Auth(AuthRequest) returns (AuthResponse) {}
    rpc GetUserId(GetRequest) returns (GetResponse) {}
}

message AuthRequest {
    int64 Id = 1;
    string Login = 2;
    string Password = 3;
    string FName = 4;
    string LName = 5;
    string CompanyName = 6;
    string Avatar = 7;
    int64 BalanceId = 8;
}

message AuthResponse {
    string Token = 1;
    int64 UserId = 2;
}

message GetRequest {
    string Token = 1;
}

message GetResponse {
    int64 Id = 1;
}